# 2kcomp-league-bot

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .railwayignore  APP_SUMMARY.md  CHANGELOG.md  COMMANDS.md  COMMUNITY_FEATURES.md  CONTRIBUTING.md  CRITICAL_SETTINGS_PRESERVATION.md  DEPLOYMENT.md  DEPLOYMENT_AUTOMATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FEATURES.md  LEADING_SCORERS_REPORT.md  Makefile  PERMISSION_FIX_SUMMARY.md  POLLING_SYSTEM.md  PRODUCTION_DEPLOYMENT.md  PROJECT_TRACKER.md  RAILWAY_DEPLOYMENT.md  RAILWAY_ENV_VARS.md  README.md  RECORDS_CONFIG_PRESERVATION.md  bot.py  check_caitlin_clark.py  check_caitlin_detailed.py  debug_env.py  debug_team_ids.py  deploy-railway.bat  deploy-railway.sh  deployment-config.yml  docker-compose.prod.yml  docker-compose.yml  env.example  env.local.example  find_63_point_game.py  (+18 more)
.github/workflows/: ci-cd.yml  ci.yml  docker-publish.yml
cogs/: achievements.py  admin.py  game_analysis.py  history.py  league.py  milestones.py  notifications.py  player.py  polls.py  profile_claiming.py  records.py  spotlight.py  status.py
core/: config.py  game_monitor.py  health.py  health_server.py  http.py  leaders.py  logging.py  milestones.py  names.py  notification_system.py  performance.py  performance_optimizer.py  performance_testing.py  persistence.py  rankings.py  record_monitor.py  records.py  sportspress.py  spotlight.py  types.py  utils.py  welcome.py
data/: records_seed.json
monitoring/: prometheus.yml
scripts/: deploy.sh  health-monitor.sh  performance_test.py  production_ready.py  production_ready_simple.py  send-alert.sh
tests/: README.md  __init__.py  conftest.py  test_discord_integration.py  test_health.py  test_integration.py  test_leaders.py  test_milestones.py  test_performance.py  test_performance_optimization.py  test_records.py  test_types.py
